fix spacing

--- a/static/styles/main.scss
+++ b/static/styles/main.scss
@@ -84,7 +84,7 @@ body, html {
 
     @keyframes expand-subtitle {
         to {
-            margin-bottom: 20px;
+            margin-bottom: 25px;
             font-size: 32px;
         }
     }
@@ -104,7 +104,6 @@ body, html {
             
             span:first-child {
                 color: $primary-font-color;
-                margin-right: 25px;
             }
         }
     }
